# 1001_albums_push

./: .gitignore  Dockerfile  README.md  albumgenerator.py  config.py  config.toml  main.py  pyproject.toml  util.py
.github/workflows/: docker-image.yml
conf/: config.toml
deployment/: cronjob_example.yaml
tests/: test_albumgenerator.py  test_config.py  test_util.py
