[tool.poetry]
name = "1001-albums-push"
version = "0.1.0"
description = ""
authors = ["Francis Conroy <francis.conroy@switchdin.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
schedule = "^1.2.2"
requests = "^2.32.3"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
